# django_inertia_svelte_example

./: .gitignore  manage.py  pyproject.toml
django_inertia_svelte_example/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
frontend/: package.json  pnpm-lock.yaml  server.js  vite.config.ts
frontend/src/: entry-client.ts  entry-server.ts
frontend/src/pages/: index.svelte
templates/: base.html
